--- a/index.html
+++ b/index.html
@@ -1,66 +1,26 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-   <link href="css/styles.css" rel="stylesheet" type="text/css">
-   <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
-   <script
-  src="https://code.jquery.com/jquery-3.4.1.js"
-  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous"></script>
-  <script src="js/scripts.js"> </script>
-  <title>MYSTIQ STUDIOS</title>
-</head>
-
-<body>
-  <div class="container">
-  <img src="images/bg2.jpg" alt="bg2" align="center">
-  <br>
-  <br>
-  <h2>ABOUT US</h2>
-  <p>When you work with us, you work with a team of committed collaborators.All aspects of our software develpment processes are intergrated,
-    interactive and agile.Our approach unifies design,development and product management to create exceptional products.
-    We start each project by understanding your business goals,the users' needs and the products' requirements.Then we help translate them into effective and elegant solutions.</p>
- <br>
- <br>
- <img src="images/bg3.jpg" alt="bg3" align="center">
- <br>
- <br>
- <h2>WHAT WE DO</h2>
-
- <img src="images/design_icon.png">
- <img src="images/dev_icon.png">
- <img src="images/product_icon.png">
- <br>
- <br>
-<h2> PORTFOLIO<h2>
-  <img src="images/work4.jpg">
-  <img src="images/work3.jpg">
-  <img src="images/work2.jpg">
-  <img src="images/work1.jpg">
-  <img src="images/work5.jpg">
-  <img src="images/work6.jpg">
-  <img src="images/work7.jpg">
-  <img src="images/work8.jpg">
-  <br>
-  <br>
-  <img src="images/bg1.jpg" alt="bg1" align="center">
-  <br>
-  <img src="images/twitter.png">
-  <img src="images/dribble.png">
-  <img src="images/facebook.png">
-  <img src="images/g_plus.png">
-  <img src="images/skype.png">
-  <img src="images/stumble_upon.png">
-  <img src="images/behance.png">
-  <img src="images/pinterest.png">
-  <img src="images/flickr.png">
-
-
-
-  </div>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery-3.4.1.js" charset="utf-8"></script>
+    <script src="js/scripts.js" charset="utf-8"></script>
+    <title>delani studio</title>
+  </head>
   <body>
+    <div class="container">
+      <div class="page">
+        <img src="images/logo.png" alt="">
+        <h1>WELCOME <br> TO DELANI STUDIO</h1>
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+      </div>
+      <div class="mouse">
+        <img src="images/mouse_click.png" alt="">
 
+      </div>
 
+    </div>
+
+  </body>
 </html>
