--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
       </div>
 
+      <div class="about">
+        <h3>ABOUT US</h3>
+        <p>When you work with us,you are part of a team of committed collaborators.All Aspects of our software development are intergrated,interactive<br>and agile<br>
+          Our approach unifies design,development and product management to create exceptional products.<br>
+          We start each project by understanding your business goals,the users needs and the product requirements.<br>
+          Then we help translate them into effective and elegant solutions.
+        </p>
+      </div>
+
     </div>
 
   </body>
