--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         </p>
       </div>
 
+      <div class="services">
+        <h3>SERVICES</h3>
+        <p>Before we sign a contract or write a line of code,our team will spend the neccessary time needed to understand your product vision.<br>
+        The outcome of this scoping session is a proposal or high level statement of work.<br>
+        Based on your requirements,we can provide a complete offering or just the prices you need.</p>
+      </div>
+
     </div>
 
   </body>
