--- a/index.html
+++ b/index.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/jquery-3.4.1.js" charset="utf-8"></script>
-    <script src="js/scripts.js" charset="utf-8"></script>
+
+<head>
+  <meta charset="utf-8">
     <title>delani studio</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="page">
-        <img src="images/logo.png" alt="">
-        <h1>WELCOME <br> TO DELANI STUDIO</h1>
-        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-      </div>
-      <div class="mouse">
-        <img src="images/mouse_click.png" alt="">
-
-      </div>
-
-      <div class="about">
-        <h3>ABOUT US</h3>
-        <p>When you work with us,you are part of a team of committed collaborators.All Aspects of our software development are intergrated,interactive<br>and agile<br>
-          Our approach unifies design,development and product management to create exceptional products.<br>
-          We start each project by understanding your business goals,the users needs and the product requirements.<br>
-          Then we help translate them into effective and elegant solutions.
-        </p>
-      </div>
-
-      <div class="services">
-        <h3>SERVICES</h3>
-        <p>Before we sign a contract or write a line of code,our team will spend the neccessary time needed to understand your product vision.<br>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="welcom">
+      <img src="images/logo.png" alt="">
+      <h1>WELCOME</h1>
+      <h2>TO DELANI STUDIO</h2>
+      <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+      <img src="images/mouse_click.png" alt="">
+    </div>
+    <div class="about">
+      <h3>ABOUT US</h3>
+      <p>When you work with us,you are part of a team of committed collaborators.All Aspects of our software development are intergrated,interactive<br>and agile<br>
+        Our approach unifies design,development and product management to create exceptional products.<br>
+        We start each project by understanding your business goals,the users needs and the product requirements.<br>
+        Then we help translate them into effective and elegant solutions.
+      </p>
+    </div>
+    <div id="serve">
+      <h3>SERVICES</h3>
+      <p>Before we sign a contract or write a line of code,our team will spend the neccessary time needed to understand your product vision.<br>
         The outcome of this scoping session is a proposal or high level statement of work.<br>
         Based on your requirements,we can provide a complete offering or just the prices you need.</p>
       </div>
+      <h3>WHAT WE DO</h3>
+ 
+        <img src="images/design_icon.png" alt="">
+  
+        <img src="images/dev_icon.png" alt="">
+      
+        <img src="images/product_icon.png">
+  
+      <h3>PORTFOLIO</h3>
+      <img src="images/work4.jpg">
+      <img src="images/work3.jpg">
+      <img src="images/work2.jpg">
+      <img src="images/work1.jpg">
+      <img src="images/work5.jpg">
+      <img src="images/work6.jpg">
+      <img src="images/work7.jpg">
+      <img src="images/work8.jpg">
+   
+      <h4>CONTACT US</h4>
 
-    </div>
+</body>
 
-  </body>
 </html>
