--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <h3>WHAT WE DO</h3>
  
         <img src="images/design_icon.png" alt="">
+        <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+            Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
   
         <img src="images/dev_icon.png" alt="">
       
