--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-  <script src="jquery-3.4.1.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </head>
 <body>
+  <div class="container">
   <div class="welcom">
       <img src="images/logo.png" alt="">
       <h1>WELCOME</h1>
@@ -32,25 +36,36 @@
         The outcome of this scoping session is a proposal or high level statement of work.<br>
         Based on your requirements,we can provide a complete offering or just the prices you need.</p>
       </div>
+      <br>
+      <br>
       <h3>WHAT WE DO</h3> 
       <div class="clearfix" >
           <div class="img-container">
         <img src="images/design_icon.png" alt="">
         <h4>DESIGN</h4>
+        <div id="show">click to show/hide</div>
+        <div class="design">
         <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
             Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+        </div>
           </div>
           <div class="img-container">
         <img src="images/dev_icon.png" alt="">
         <h4>DEVELOPMENT</h4>
+        <div id="show">click to hide/show</div>
+        <div class="development">
       <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
           They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+        </div>
         </div>
         <div class="img-container">
         <img src="images/product_icon.png">
   <h4>PRODUCT MANAGEMENT</h4>
+        <div id="show">click to hide/show</div>
+        <div class="product">
   <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
       This iterative process allows for changes as business requirements evolve.</p>
+    </div>
     </div>
   </div>
       <h3>PORTIFOLIO</h3>
@@ -84,7 +99,8 @@
        </div>
    </div>
    </div>
-     
+     <br>
+     <br>
       <div id="contact">
           <!-- <form> -->
               <h4>CONTACT US</h4>
@@ -107,7 +123,7 @@
         <img src="images/you_tube.png" alt="" class="img-fluid z-depth-1">
         </div>
       </div>
-
+    </div>
 </body>
 
 </html>
