--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
         <div class="product">
   <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
       This iterative process allows for changes as business requirements evolve.</p>
-    </div>
-    </div>
+       </div>
+       </div>
   </div>
       <h3>PORTIFOLIO</h3>
            <div class="container">
+            <div class="portfolio">
                <div class="card-deck">
                   <div class="card">
            <img src="images/work4.jpg" alt="img" class="img-fluid">
@@ -97,6 +98,7 @@
            <div class="card">
            <img src="images/work8.jpg" alt="img" class="img-fluid">
        </div>
+      </div>
    </div>
    </div>
      <br>
