--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
         </div>
           </div>
-          <div class="img-container">
+          <div class="img-container"> 
         <img src="images/dev_icon.png" alt="">
         <h4>DEVELOPMENT</h4>
-        <div id="show">click to hide/show</div>
+        <div id="click">click to hide/show</div>
         <div class="development">
       <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
           They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
@@ -61,7 +61,7 @@
         <div class="img-container">
         <img src="images/product_icon.png">
   <h4>PRODUCT MANAGEMENT</h4>
-        <div id="show">click to hide/show</div>
+        <div id="s">click to hide/show</div>
         <div class="product">
   <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
       This iterative process allows for changes as business requirements evolve.</p>
@@ -102,15 +102,35 @@
    </div>
      <br>
      <br>
-      <div id="contact">
-          <!-- <form> -->
-              <h4>CONTACT US</h4>
-                  <input type="text" id="size3"  placeholder="Name...">
-                  <input type="text" id="size3"  placeholder="Email...."><br>
-                  <input type="text" id="size" placeholder="Your message.....">
-                </div>
+      <!-- contact section -->
+  <div class="container-fluid " id="contact">
+      <h1 class="text-center con">CONTACT US</h1>
+      <div class="row d-flex justify-content-center">
+          <form class="form-row mb-4">
+              <!-- first input form -->
+              <div class="col-md-6">
+                  <input type="text" name="Name" placeholder="Name" class="form control" id="nameDetail">
+              </div>
+              <!-- second input form -->
+              <div class="col-md-6">
+                  <input type="email" name="Email" placeholder="Email" class="form control">
+              </div>
+          </form>
+      </div>
+      <div class="row d-flex justify-content-center alefo">
+          <form class="form-row mb-4">
+              <!-- textarea  -->
+              <div class="col text-center">
+                  <textarea name="message" id="meso" cols="60" rows="10" placeholder="Your message here"></textarea>
+              </div>
+          </form>
+      </div>
+      <div class="row d-flex justify-content-center ">
+          <form>
+              <button type="submit" id="btns" class="btn btn-primary">Send</button>
+          </form>
+      </div>
               
-            <!-- </form> -->
         </div>
         <div id="items">
         <img src="images/twitter.png" alt="" class="img-fluid z-depth-1">
