--- a/index.html
+++ b/index.html
@@ -41,28 +41,30 @@
       <h3>WHAT WE DO</h3> 
       <div class="clearfix" >
           <div class="img-container">
-        <img src="images/design_icon.png" alt="">
-        <h4>DESIGN</h4>
-        <div id="show">click to show/hide</div>
+              <div class="clickable">
+        <img src="images/design_icon.png"  class="show1" alt="">
+        <div id="show">click to hide/show</div>
         <div class="design">
+        <h4>DESIGN</h4>
         <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
             Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+        </div>
         </div>
           </div>
           <div class="img-container"> 
         <img src="images/dev_icon.png" alt="">
-        <h4>DEVELOPMENT</h4>
         <div id="click">click to hide/show</div>
         <div class="development">
+        <h4>DEVELOPMENT</h4>
       <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
           They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
         </div>
         </div>
         <div class="img-container">
         <img src="images/product_icon.png">
-  <h4>PRODUCT MANAGEMENT</h4>
         <div id="s">click to hide/show</div>
         <div class="product">
+  <h4>PRODUCT MANAGEMENT</h4>
   <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
       This iterative process allows for changes as business requirements evolve.</p>
        </div>
