--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
           <div class="img-container">
               <div class="clickable">
         <img src="images/design_icon.png"  class="show1" alt="">
-        <div id="show">click to hide/show</div>
         <div class="design">
         <h4>DESIGN</h4>
         <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
@@ -52,17 +51,17 @@
         </div>
           </div>
           <div class="img-container"> 
-        <img src="images/dev_icon.png" alt="">
-        <div id="click">click to hide/show</div>
+        <img src="images/dev_icon.png" class="show2" alt="">
+        <div id="click">
         <div class="development">
         <h4>DEVELOPMENT</h4>
       <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
           They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
         </div>
         </div>
+        </div>
         <div class="img-container">
-        <img src="images/product_icon.png">
-        <div id="s">click to hide/show</div>
+        <img src="images/product_icon.png" class="show3">
         <div class="product">
   <h4>PRODUCT MANAGEMENT</h4>
   <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.
